# cca

./: .clippy.toml  .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY_REVIEW.md  WORKPLAN.md  cca-design-proposal.md  cca.toml  cca.toml.example  docker-compose.test.yml  docker-compose.yml  rustfmt.toml
.cargo/: audit.toml
.claude/: mcp_servers.json  mcp_servers.json.example
.github/workflows/: ci.yml  performance.yml  release.yml
Formula/: cca.rb
agents/: coordinator.md  devops.md  frontend.md  qa.md
crates/cca-acp/: Cargo.toml
crates/cca-acp/src/: client.rs  lib.rs  message.rs  server.rs
crates/cca-acp/tests/: client_tests.rs  message_tests.rs  server_tests.rs
crates/cca-cli/: Cargo.toml
crates/cca-cli/src/: main.rs
crates/cca-cli/src/commands/: agent.rs  config.rs  daemon.rs  http.rs  memory.rs  mod.rs  task.rs
crates/cca-core/: Cargo.toml
crates/cca-core/src/: agent.rs  communication.rs  error.rs  lib.rs  memory.rs  task.rs  types.rs  util.rs
crates/cca-core/tests/: agent_tests.rs  communication_tests.rs  memory_tests.rs  task_tests.rs
crates/cca-daemon/: Cargo.toml
crates/cca-daemon/benches/: BENCHMARKS.md  code_indexing.rs  communication_benchmarks.rs  compression_benchmarks.rs  flamegraph_profile.rs  orchestrator.rs  postgres_queries.rs  rl_benchmarks.rs  token_benchmarks.rs
crates/cca-daemon/src/: agent_manager.rs  auth.rs  code_parser.rs  config.rs  daemon.rs  embeddings.rs  indexing.rs  main.rs  metrics.rs  orchestrator.rs  postgres.rs  redis.rs  rl.rs  tmux.rs  tokens.rs  validation.rs
crates/cca-daemon/tests/: api_integration.rs  config_tests.rs  security_tests.rs  token_service_integration.rs
crates/cca-mcp/: Cargo.toml
crates/cca-mcp/src/: client.rs  lib.rs  main.rs  server.rs  tools.rs  types.rs
crates/cca-mcp/tests/: mcp_tools_integration.rs
crates/cca-rl/: Cargo.toml
crates/cca-rl/benches/: rl_algorithm_benchmarks.rs
crates/cca-rl/src/: algorithm.rs  engine.rs  experience.rs  lib.rs  state.rs
crates/cca-rl/tests/: rl_integration.rs
docs/: CCA_INTEGRATION.md  CCA_SUMMARY.md  DIAGNOSTIC_REPORT.md  README.md  api-reference.md  architecture.md  configuration.md  data-flow.md  deployment.md  load-chaos-testing.md  performance-testing.md  protocols.md  recommendations.md  security-hardening.md  user-guide.md
docs/components/: cca-acp.md  cca-cli.md  cca-core.md  cca-daemon.md  cca-mcp.md  cca-rl.md
migrations/: 002_embedding_dimension_768.sql  003_code_chunks.sql  init.sql
scripts/: install.conf  install.sh  package.sh  perf.sh  uninstall.sh
tests/chaos/: Cargo.toml  README.md  run-chaos.sh  toxiproxy.json
tests/chaos/src/: agent_crash_tests.rs  degradation_tests.rs  lib.rs  postgres_chaos_tests.rs  redis_chaos_tests.rs
tests/load/: README.md  agent-spawning.js  api-throughput.js  baseline.js  config.js  full-system.js  generate-report.js  message-latency.js  postgres-queries.js  redis-pubsub.js  run-all.sh  task-submission.js  token-service.js  websocket-throughput.js
tests/monitoring/: prometheus.yml
tests/monitoring/alerts/: cca-alerts.yml
tests/monitoring/grafana/dashboards/: cca-overview.json  k6-load-testing.json
tests/monitoring/grafana/provisioning/dashboards/: dashboards.yml
tests/monitoring/grafana/provisioning/datasources/: datasources.yml
