[workspace]
resolver = "2"

members = [
    "crates/cca-core",
    "crates/cca-daemon",
    "crates/cca-cli",
    "crates/cca-mcp",
    "crates/cca-acp",
    "crates/cca-rl",
    "tests/chaos",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Maciej J. Hajduk"]
license = "MIT"
repository = "https://github.com/your-org/cca"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Configuration
config = "0.14"

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# PTY
portable-pty = "0.8"

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Redis
deadpool-redis = "0.18"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# PostgreSQL
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# HTTP/API
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Metrics
prometheus = "0.13"

# Compression
lz4 = "1.28"

# Directory utilities
dirs = "5.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async trait
async-trait = "0.1"

# Constant-time comparison for security
subtle = "2.6"

# Futures utilities
futures = "0.3"

# Rate limiting
governor = "0.6"

# Internal crates
cca-core = { path = "crates/cca-core" }
cca-acp = { path = "crates/cca-acp" }
cca-mcp = { path = "crates/cca-mcp" }
cca-rl = { path = "crates/cca-rl" }

# Test dependencies
[workspace.dependencies.tokio-test]
version = "0.4"

[workspace.dependencies.tempfile]
version = "3.14"

[workspace.dependencies.wiremock]
version = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true

# Add workspace package for integration tests
[workspace.metadata.integration-tests]
enabled = true
