[package]
name = "cca-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CCA CLI - command line interface for CCA"

[[bin]]
name = "cca"
path = "src/main.rs"

[dependencies]
cca-core.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
uuid.workspace = true
reqwest.workspace = true
dirs.workspace = true
toml.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
