[package]
name = "cca-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for CCA - types, traits, and shared functionality"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true

# Constant-time comparison for security
subtle = "2.6"

# Directory utilities
dirs = "5.0"
