[package]
name = "cca-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CCA daemon - main orchestration service"

[[bin]]
name = "ccad"
path = "src/main.rs"

[dependencies]
cca-core.workspace = true
cca-acp.workspace = true
cca-mcp.workspace = true
cca-rl.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
uuid.workspace = true
chrono.workspace = true
portable-pty.workspace = true
deadpool-redis.workspace = true
redis.workspace = true
sqlx.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
prometheus.workspace = true
dirs.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
