[package]
name = "cca-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CCA daemon - main orchestration service"

[features]
default = []
# Development feature - allows disabling authentication via config
# SECURITY: Never enable this feature in production builds
dev = []

[[bin]]
name = "ccad"
path = "src/main.rs"

[dependencies]
cca-core.workspace = true
cca-acp.workspace = true
cca-mcp.workspace = true
cca-rl.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"
config.workspace = true
uuid.workspace = true
chrono.workspace = true
portable-pty.workspace = true
deadpool-redis.workspace = true
redis.workspace = true
futures-util.workspace = true
sqlx.workspace = true
pgvector = { version = "0.4", features = ["sqlx"] }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
prometheus.workspace = true
dirs.workspace = true
governor = "0.6"
reqwest = { workspace = true }

# Code parsing with tree-sitter
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"

# Directory traversal and pattern matching
walkdir = "2.5"
glob = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3.14"
axum-test = "16"
criterion.workspace = true
pprof.workspace = true
dhat.workspace = true
rand = "0.8"

# Token efficiency benchmarks
[[bench]]
name = "token_benchmarks"
harness = false

# Compression algorithm benchmarks
[[bench]]
name = "compression_benchmarks"
harness = false

# RL engine benchmarks
[[bench]]
name = "rl_benchmarks"
harness = false

# Inter-agent communication benchmarks
[[bench]]
name = "communication_benchmarks"
harness = false

# Code parsing/indexing benchmarks
[[bench]]
name = "code_indexing"
harness = false

# PostgreSQL query benchmarks
[[bench]]
name = "postgres_queries"
harness = false

# Orchestrator routing benchmarks
[[bench]]
name = "orchestrator"
harness = false

# Full profiling benchmark with flamegraph output
[[bench]]
name = "flamegraph_profile"
harness = false
