[package]
name = "cca-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CCA MCP server - Model Context Protocol integration for Claude Code"

[[bin]]
name = "cca-mcp"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures-util.workspace = true
reqwest.workspace = true
clap.workspace = true
dirs.workspace = true
toml.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
wiremock = "0.6"
